Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -123,13 +123,16 @@ Neu:
 <a href="https://tv.vitaforas.de/bär.mp4">
 <img src="https://tv.vitaforas.de/bär.jpg" alt="2" width="100%" height="auto"></a>
 
-
+Durch einen verrückten Zufall werden der neurotische Kragenbär Patrick (Stimme im englischsprachigen Original: Pauly Shore) und sein bester Kumpel, der immer für einen Scherz zu habende Hase Oskar (Stephen Thomas Ochsner), schon wieder zu temporären Pflegeeltern. Nachdem ihnen beim letzten Mal plötzlich ein hilfloses Panda-Baby in den Schoß gefallen war, ist es jetzt ein junger Grizzly, der die Hilfe des Duos braucht. Als sie den Kleinen aus einem auf dem Fluss schwimmenden Korb fischen, haben sie keine Ahnung, wer und wo die Eltern ihres Findelbärchens sein könnten. Deshalb beschließen sie, sich auf die Suche nach ihnen zu machen. Dabei erlebt die bunte Truppe eine ganze Reihe von erstaunlichen Abenteuern und schließt unterwegs auch noch so manche neue Freundschaft.
  <p>         
 </p>         
 
 <a href="https://tv.vitaforas.de/sawx.mp4">
 <img src="https://tv.vitaforas.de/sawx.jpg" alt="29" width="100%" height="auto"></a>
+
 Auch wenn Jigsaw beziehungsweise John Kramer nicht mehr zurückkehrt, bleiben wir doch in demselben Universum. Dennoch, der Film hat vielen Fans keine Freude gemacht und deswegen schlägt die Fortsetzung jetzt eine ganz andere Richtung ein: In Form eines Prequels bringt „Saw 10“ Jigsaw jetzt nämlich doch zurück.
+
+Nachdem er als Jigsaw schon mehrere Menschen mittels grausamer Folterfallen vermeintlich dazu gebracht hat, ihr Leben wieder wertzuschätzen, hat John Kramer (Tobin Bell) wegen seiner schweren Krebserkrankung selbst nur noch wenige Monate zu leben. Doch schöpft er neue Hoffnung, als er von einer experimentellen Wunderbehandlung mit großen Erfolgschancen hört. Er macht sich auf den Weg nach Mexiko, um dort in einer Untergrundklinik den entsprechenden Eingriff durchführen zu lassen – fällt allerdings einem perfiden Betrug zum Opfer. Die Betreiber der Klinik machen verzweifelten Menschen falsche Versprechungen, um ihnen so das Geld aus der Tasche zu ziehen. Doch haben sie die Rechnung ohne Jigsaw gemacht! Kramer will die Betrüger zur Rechenschaft ziehen und denkt sich einmal mehr sadistische Todesapparaturen aus, mit denen die Scharlatane gequält werden sollen...
 
  <p>         
 </p>         
@@ -138,11 +141,15 @@ Auch wenn Jigsaw beziehungsweise John Kramer nicht mehr zurückkehrt, bleiben wi
 <a href="https://tv.vitaforas.de/nuggets.mp4">
 <img src="https://tv.vitaforas.de/nuggets.jpg" alt="48" width="100%" height="auto"></a>
 
+Nachdem Henne Ginger (Stimme im Original: Thandiwe Newton) und der kompletten Hühnerschar die Flucht vom Grusel-Bauernhof der Tweedys geglückt ist, haben sie auf einer Insel einen friedlichen und sicheren Rückzugsort gefunden, fern aller Gefahren der Menschenwelt. Als aus Gingers Liebesbeziehung mit Rocky (Zachary Levi) dann auch noch das Küken Molly (Bella Ramsey) hervorgeht, erscheint das Glück der beiden perfekt. Doch auf dem Festland geht das Grauen weiter, denn Mrs. Tweedy (Miranda Richardson) hat eine Fabrik eröffnet, in der Hühner zu unsäglichen Dingen weiterverarbeitet werden sollen. Das können Ginger, Rocky und ihrer Gefolgschaft so nicht dulden und sie beschließen, den Artgenossen zu helfen. Und so kommt es, dass es diesmal nicht um einen großen Ausbruch, sondern um einen großen Einbruch – in das massiv gesicherte Fabrikgelände – geht.
+
+Fortsetzung zum Knetanimationsfilm „Chicken Run – Hennen rennen“ aus dem Jahr 2000.
  <p>         
 </p>         
 
      <a href="https://tv.vitaforas.de/cocain.mp4">
 <img src="https://tv.vitaforas.de/cocain.jpg" alt="26" width="100%" height="auto"></a>
+
 1985 stürzt ein randvoll mit Kokain beladenes Flugzeug irgendwo im Nirgendwo über den Wäldern Georgias ab. Sind die mehr als 200 Kilogramm Rauschgift und damit potenziell eine ganze Menge Geld also für immer verloren? Die Eigentümer, eine Handvoll Kriminelle, wollen es eher nicht darauf ankommen lassen und vor Ort lieber auf Nummer sichergehen. Auf der Suche nach dem wertvollen Stoff merken sie jedoch, dass jemand anderes schneller als sie war. Denn fündig geworden ist nämlich ein riesiger Schwarzbär. Und der dreht nun völlig zugedröhnt am Rad. Touristen, ein paar Teenager, Polizisten und auch die Gangster passen auf Koks super ins Beuteschema des monströsen Tieres. Jetzt heißt es nur noch eins: überleben und hoffen, dass die pelzige Kampfmaschine irgendwann von ihrem Trip runterkommt. Doch der Bär ist auf den Geschmack gekommen und will immer mehr von dem weißen Pulver.
 
 Basierend auf wahren Begebenheiten:
@@ -155,6 +162,7 @@ Basierend auf wahren Begebenheiten:
 <a href="https://tv.vitaforas.de/killroom.mp4">
 <img src="https://tv.vitaforas.de/bildname7.jpg" alt="25" width="100%" height="auto"></a>
 
+Patrice Capullo (Uma Thurman) hat ein Problem: Ihre Kunstgalerie wirft kein Geld ab. Gordon (Samuel L. Jackson) hat ein noch größeres Problem: Zwar ist das Arrangieren von Morden für die Mafia lukrativ, aber er und sein Freund Reggie (Joe Manganiello) brauchen eine bessere Möglichkeit, ihr Geld zu waschen. Durch eine zufällige Bekanntmachung von Patrices' Drogendealer trifft die Kunstwelt auf die Unterwelt, und ein Plan wird ausgeheckt. Der einzige Haken an der Sache: Patrice braucht etwas zum Verkaufen. So zapft Reggie seinen inneren Künstler an und fertigt ein Gemälde an, das sofort für einen unglaublich hohen Preis verkauft wird. Als der beachtliche Preis für diesen neuen geheimnisvollen Künstler zufällig durchsickert, ist die Kunstkarriere von "The Bagman" geboren, der Aufmerksamkeit und Presse auf sich zieht, was seinem Vorgesetzten in der Unterwelt gar nicht gefällt.
  <p>         
 </p>         
      <a href="https://tv.vitaforas.de/fut.mp4">
@@ -196,6 +204,7 @@ In diesem Katastrophenfilm von Roland Emmerich befindet sich der Mond mit seinen
 </p>         
      <a href="https://tv.vitaforas.de/stichtag.mp4">
 <img src="https://tv.vitaforas.de/stichtag.jpg" alt="30" width="100%" height="auto"></a></li>
+
 Unter der Regie von Todd Phillips finden sich Peter Highman (Robert Downey Jr.) und Ethan Tremblay (Zach Galifianakis) zusammen, um einen außergewöhnlichen Road Trip zu absolvieren.
 Peter blickt der Vaterweihe entgegen. In weniger als einer Woche steht die Niederkunft seiner Frau an – sollte er den Flug nach Atlanta und damit die Geburt seines Kindes verpassen, war’s das mit dem Haussegen. Und so kommt es dann auch, als er auf den chaotischen Nachwuchs-Schauspieler Ethan trifft und in eine Serie grotesker Zwischenfälle schlittert. Per Anhalter müssen die beiden nach Atlanta reisen, um das drohende Unheil abzuwenden...
 
@@ -227,27 +236,43 @@ Die Menschheit nutzt Roboter, um ihnen das Leben zu vereinfachen. Dabei unterlie
 Der Flug des Navigators (1986 ‧ Sci-Fi/Abenteuer)
 
 Der 12-jährige David verschwindet im Sommer 1978 spurlos und taucht erst acht Jahre später wieder auf, aber er ist während seiner Abwesenheit nicht gealtert. Die NASA vermutet einen Zusammenhang zwischen dem Jungen und einem notgelandeten Ufo. Tatsächlich haben die Außerirdischen ihm Sternenkarten ins Gehirn eingespeichert, mit denen sie nun zu ihrem Heimatplaneten zurückkehren wollen. Die Mitarbeiter der NASA wollen das Mysterium eingehender untersuchen, doch der Junge flieht mit dem Ufo.
-     <li><a href="https://tv.vitaforas.de/video1.mp4">
+
+     <li>
+<a href="https://tv.vitaforas.de/video1.mp4">
 <img src="https://tv.vitaforas.de/futura.jpg" alt="1" width="100%" height="auto"></a>
+
 Frys chronische Unpünktlichkeit bringt ihm Ärger ein: Farnsworth ist sauer auf ihn, weil er zu spät zur Arbeit kommt und Leela ist enttäuscht, weil er sie bei ihrem Geburtstagsessen versetzt. Als Wiedergutmachung lädt Fry Leela zu einem Geburtstagsdinner ein. Kurz davor testet Professor Farnsworth dummerweise noch eine Zeitmaschine, die ihn, Fry und Bender bis zum Ende des Universums und immer weiter weg von Frys Verabredung jagt.
-     <a href="https://tv.vitaforas.de/readyplayerone.mp4">
+     
+<a href="https://tv.vitaforas.de/readyplayerone.mp4">
 <img src="https://tv.vitaforas.de/readyplayerone.jpg" alt="2" width="100%" height="auto"></a>
+
 Im Jahr 2045 steht die ökologisch ausgebeutete Welt am Rande des endgültigen Zusammenbruchs. Doch die Menschen finden Erlösung in dem gigantischen virtuellen Universum Oasis, das der geniale James Halliday entwickelt hat. Als Halliday stirbt, hinterlässt er sein ungeheures Vermögen der ersten Person, die jenes Easter Egg findet, das er in der Oasis versteckt hat. 
+
      <a href="https://tv.vitaforas.de/matrix.mp4">
 <img src="https://tv.vitaforas.de/matrix.jpg" alt="3" width="100%" height="auto"></a>
+
 In  Matrix Resurrections, dem 4. Teil der Sci-Fi-Reihe, kehrt Keanu Reeves in die Matrix zurück, jene von Maschinen kontrollierte Welt, welche die Wachowskis 1999 erschufen und zum Kult-Status führten. Thomas Anderson lebt ein normales Leben, arbeitet für eine große Firma und geht regelmäßig zur Therapie, wo sein Therapeut versucht, ihm seine Traumata auszutreiben. Denn Thomas hat Probleme damit, Realität und Fiktion auseinanderzuhalten. Er kann doch nicht wirklich einst als Auserwählter Neo in den Krieg gegen die Maschinen gezogen sein, oder?
+
      <a href="https://tv.vitaforas.de/Hypnotic.mp4">
 <img src="https://tv.vitaforas.de/Hypnotic.jpg" alt="4" width="100%" height="auto"></a>
+
 Seit der Entführung seiner Tochter ist die Arbeit Danny Rourkes (Ben Affleck) einzige stabile Säule im Leben. Den Rest haben Schuld, Verzweiflung und Trauer gnadenlos aufgefressen. Als Polizist zu helfen, das geht noch. Als er knietief in seinem jüngstem Fall steckt, kann er die Vergangenheit jedoch nicht davon abhalten, sich in seinen Job einzumischen. Denn bei den Ermittlungen zu einer Serie von Bankrauben stößt er unerwartet auf einen Hinweis zum Verbleib seiner Tochter. Die Spur führt ihn und Diana Cruz (Alice Braga) direkt zu Gangster Dellrayne (William Fichtner). Als sich herausstellt, dass der mehr als nur Banksafes knacken kann, scheint die vermeintliche Realität Risse zu bröckeln. Rourke scheint niemandem mehr trauen zu können und es wird zunehmend schwerer, einen klaren Kopf zu bewahren, um seine Tochter endlich aus den Fängen des Verbrechens befreien und wieder nach Hause holen zu können.
+
      <a href="https://tv.vitaforas.de/JohnnyZ.mp4">
 <img src="https://tv.vitaforas.de/z.jpg" alt="5" width="100%" height="auto"></a>
+
 Johnny ist halb Mensch, halb Zombie – ein rares Hybridwesen, das in seinem Blut ein mögliches Heilmittel gegen die weltweit grassierende Untoten-Epidemie tragen könnte. 
+
      <a href="https://tv.vitaforas.de/alles.mp4">
 <img src="https://tv.vitaforas.de/alles.jpg" alt="6" width="100%" height="auto"></a>
+
 Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, Wut, Ekel und Traurigkeit leben im Kontrollzentrum von Rileys Verstand, von wo aus sie dem jungen Mädchen Ratschläge erteilen und ihr zur Seite stehen. Doch nach dem Umzug haben Riley und ihre Gefühle Probleme mit dem Leben in der fremden Stadt und es geht turbulent zu in der innerlichen Kommandozentrale ihrer Emotionen. 
+
      <a href="https://tv.vitaforas.de/baymax.mp4">
 <img src="https://tv.vitaforas.de/baymax.jpg" alt="7" width="100%" height="auto"></a>
+
 In „Baymax – Robowahobu in Serie“ erlebt der 14-jährige Hiro Hamada immer wieder ungeheuerliche Abenteuer. Stets an seiner Seite: der namensgebende Roboter Baymax. 
+
      <a href="https://tv.vitaforas.de/tribut.mp4">
 <img src="https://tv.vitaforas.de/tribut.jpg" alt="8" width="100%" height="auto"></a>
 
@@ -255,9 +280,13 @@ Die einst mächtige Familie Snow durchlebt schwere Zeiten und ihr Schicksal hän
 
      <a href="https://tv.vitaforas.de/Chappie.mp4">
 <img src="https://tv.vitaforas.de/chapp.jpg" alt="9" width="100%" height="auto"></a>
+
 In einer futuristischen Welt, in der Roboter die Polizeiarbeit übernehmen, erreicht ein einsamer Droide eine höhere Ebene künstlicher Intelligenz.
+
      <a href="https://tv.vitaforas.de/momo.mp4">
-<img src="https://tv.vitaforas.de/momo.jpg" alt="10" width="100%" height="auto"></a></li>
+<img src="https://tv.vitaforas.de/momo.jpg" alt="10" width="100%" height="auto"></a>
+</li>
+
 Momo (1986 ‧ Fantasy/Kinderfilm)
 
 Das Waisenmädchen Momo lebt allein mit seiner Schildkröte Kassiopeia in einem riesigen Amphitheater und hat viele Freunde. Doch eines Tages hat niemand mehr Zeit. Alle sind von der Idee besessen, ungenutzte Zeit für ein längeres Leben zu sparen. Mysteriöse graue Herren mit Aktenkoffern wollen den Menschen mit verklausulierten Verträgen die Zeit stehlen und diese für ihre eigenen Zwecke benutzen. Mit Hilfe ihrer Schildkröte und einer Stundenblume stellt Momo sich den Zeitdieben entgegen.
@@ -265,9 +294,12 @@ Das Waisenmädchen Momo lebt allein mit seiner Schildkröte Kassiopeia in einem 
      
 
      <a href="https://tv.vitaforas.de/five.mp4">
-<img src="https://tv.vitaforas.de/five.png" alt="10" width="100%" height="auto"></a></li>
+<img src="https://tv.vitaforas.de/five.png" alt="10" width="100%" height="auto"></a>
+</li>
+
      <a href="https://tv.vitaforas.de/finest.mp4">
 <img src="https://tv.vitaforas.de/finest.jpg" alt="10" width="100%" height="auto"></a></li>
+
   </ul>
 
 
