Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -823,9 +823,8 @@ video.play();
                                                 <!-- Work -->
                                                         <article id="work">
                                                                 <h2 class="major">FSK 0</h2>
-                                                                <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-
-
+ 
+                                                              <span class="image main"><img src="https://tv.vitaforas.de/images/banner.jpg" alt="" /></span>
 
 <p> Mail: kontakt@vitaforas.de
 </p>  
@@ -869,7 +868,7 @@ Hosted in Germany © by vitaforas
                                                 <!-- About -->
                                                         <article id="about">
                                                                 <h2 class="major">FSK 18</h2>
-                                                                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+                                                                  <span class="image main"><img src="https://tv.vitaforas.de/images/banner.jpg" alt="" /></span>
 
 <p>
 </p>
