Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -870,6 +870,20 @@ Hosted in Germany © by vitaforas
                                                                 <h2 class="major">FSK 18</h2>
                                                                   <span class="image main"><img src="https://tv.vitaforas.de/images/banner.jpg" alt="" /></span>
 
+
+
+<p>
+</p>
+
+
+ <a href="https://tv.vitaforas.de/motel.mp4">
+<img src="https://tv.vitaforas.de/motel.jpg" alt="15" width="100%" height="auto"></a>
+
+Clown Motel
+<p>
+</p>
+Alma Perez kehrt nach langer Zeit in ihre Heimat zurück. Sie stellt die Behauptung auf, dass das Land einem ausgerotteten Stamm von Ureinwohnern gehört und will es zu einem Gedenkpark umwandeln. Dazu müsste aber auch das berüchtigte Clown Motel abgerissen werden. Damit legt sie sich jedoch mit der kultartigen Kirche "The Church of Chindi" an, die einen bösartigen Geist für ihre Zwecke missbraucht - denn das Motel erfüllt einen mysteriösen. Tödlichen und äußerst blutigen Zweck. Erschreckend, unheimlich und tödlich! Tobin Bell und Randy Couture in einem blutigen Kampf gegen die unheilvollen Machenschaften einer grausamen Sekte.
+
 <p>
 </p>
 
