Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -826,6 +826,19 @@ video.play();
  
                                                               <span class="image main"><img src="https://tv.vitaforas.de/images/banner.jpg" alt="" /></span>
 
+
+ <p>         
+</p>
+     <a href="https://tv.vitaforas.de/baymax.mp4">
+<img src="https://tv.vitaforas.de/baymax.jpg" alt="7" width="100%" height="auto"></a>
+
+In „Baymax – Robowahobu in Serie“ erlebt der 14-jährige Hiro Hamada immer wieder ungeheuerliche Abenteuer. Stets an seiner Seite: der namensgebende Roboter Baymax. 
+
+ <p>         
+</p>
+
+
+
 <p> Mail: kontakt@vitaforas.de
 </p>  
 
