Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@ Hosted in Germany © by vitaforas
 </p>
 
 
- <a href="https://tv.vitaforas.de/motel.mp4">
+ <a href="https://tv.vitaforas.de/home/vitaforas/motel.mp4">
 <img src="https://tv.vitaforas.de/motel.jpg" alt="15" width="100%" height="auto"></a>
 
 Clown Motel
