--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Klick Hier</p>
 
 
 
- <p># Klick<a href="https://t.ly/fyEHR"> HIER</a> zum App Download >
+ <p># Klick<a href="https://apk.e-droid.net/apk/app2925093-0w1dcx.apk?v=7"> HIER</a> zum App Download >
  </p>
 
 Ab 11.01.2024 im Kino / Klich 4 TRAILER:
