Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -324,12 +324,8 @@ Kino:
  <p>         
 </p>
 <ul>
-     <li><a href="https://tv.vitaforas.de/Teich.mp4">
-<img src="https://tv.vitaforas.de/Teich.jpg" alt="13" width="100%" height="auto"></a>
-Mack mag es gern übersichtlich und verlässlich, so ganz ohne Aufregung und Gefahr. Und so besteht der Enterich darauf, dass seine Familie den sicheren Teich in Neuengland nicht verlässt, an dem sie leben. Selbst als ein Schwarm anderer Enten vorbeikommt, die auf dem Weg ins Ausland dort Halt macht, lässt sich Mack nicht davon abbringen – zum Ärger seiner Frau Pam und seinen beiden Kindern Dax und Gwen, die gern die Welt kennenlernen würden. Später willigt er doch noch ein und die vier machen sich gemeinsam mit Macks verschrobenem Onkel Dan auf den Weg in die große weite Welt. Jamaica ist das Ziel, von dem ihnen die anderen Entern vorgeschwärmt haben. Dabei müssen sie jedoch feststellen, dass das Abenteuer viele Hindernisse bereithält – und auch die eine oder andere Gefahr, die sie irgendwie meistern müssen …
+     <li>
 
- <p>         
-</p>
      <a href="https://tv.vitaforas.de/fire.mp4">
 <img src="https://tv.vitaforas.de/fire.jpg" alt="14" width="100%" height="auto"></a>
 Das Mädchen Charlie verfügt über pyrokinetische Fähigkeiten. Dadurch ist sie in der Lage, nur mit der Kraft ihrer Gedanken Feuer zu entfachen. Zusammen mit ihrem Vater Andy und Mutter Vicky befindet sie sich schon fast ihr ganzes Leben auf der Flucht vor der Regierungsorganisation „Die Firma“. Nachdem diese von Charlies Kräften erfahren hat, soll das Kind nämlich für grauenhafte Laborversuche und die Herstellung von Waffen benutzt werden. Vor allem der gnadenlose Agent Rainbird hängt dem Trio an den Fersen. Je länger und gefährlicher sich die gnadenlose Flucht gestaltet, umso schwerer fällt es Charlie, ihre Fähigkeiten unter Kontrolle zu halten. Bald wird sie auch für ihre Familie zur permanenten Gefahr, die in wenigen Sekunden alles um sich herum in Flammen aufgehen lassen könnte.
@@ -807,6 +803,15 @@ video.play();
 
  <p>         
 </p>
+
+<a href="https://tv.vitaforas.de/Teich.mp4">
+<img src="https://tv.vitaforas.de/Teich.jpg" alt="13" width="100%" height="auto"></a>
+
+Mack mag es gern übersichtlich und verlässlich, so ganz ohne Aufregung und Gefahr. Und so besteht der Enterich darauf, dass seine Familie den sicheren Teich in Neuengland nicht verlässt, an dem sie leben. Selbst als ein Schwarm anderer Enten vorbeikommt, die auf dem Weg ins Ausland dort Halt macht, lässt sich Mack nicht davon abbringen – zum Ärger seiner Frau Pam und seinen beiden Kindern Dax und Gwen, die gern die Welt kennenlernen würden. Später willigt er doch noch ein und die vier machen sich gemeinsam mit Macks verschrobenem Onkel Dan auf den Weg in die große weite Welt. Jamaica ist das Ziel, von dem ihnen die anderen Entern vorgeschwärmt haben. Dabei müssen sie jedoch feststellen, dass das Abenteuer viele Hindernisse bereithält – und auch die eine oder andere Gefahr, die sie irgendwie meistern müssen …
+
+ <p>         
+</p>
+
      <a href="https://tv.vitaforas.de/baymax.mp4">
 <img src="https://tv.vitaforas.de/baymax.jpg" alt="7" width="100%" height="auto"></a>
 
