Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@ Johnny ist halb Mensch, halb Zombie – ein rares Hybridwesen, das in seinem Blu
 
                                                 <!-- Contact -->
                                                         <article id="contact">
-                                                                <h2 class="major">Datenschutz</h2>
+                                                                <h2 class="major">Sammlungen</h2>
                                                                 <form method="post" action="#">
                                                                         <div class="fields">
                                                                                 <div class="field half">
