Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -369,8 +369,7 @@ Die Social-Media-Influencerin Madison ist auf einem Solo-Backpacking-Trip in Tha
      <a href="https://tv.vitaforas.de/panem.mp4">
 <img src="https://tv.vitaforas.de/panem.jpg" alt="17" width="100%" height="auto"></a>
 
-     <a href="https://tv.vitaforas.de/mario.mp4">
-<img src="https://tv.vitaforas.de/mario.jpg" alt="18" width="100%" height="auto"></a></li>
+     </li>
      </ul>
 
 
@@ -803,6 +802,9 @@ video.play();
 
  <p>         
 </p>
+
+<a href="https://tv.vitaforas.de/mario.mp4">
+<img src="https://tv.vitaforas.de/mario.jpg" alt="18" width="100%" height="auto"></a>
 
 <a href="https://tv.vitaforas.de/Teich.mp4">
 <img src="https://tv.vitaforas.de/Teich.jpg" alt="13" width="100%" height="auto"></a>
