--- a/index.html
+++ b/index.html
@@ -805,10 +805,20 @@ video.play();
 
 <a href="https://tv.vitaforas.de/mario.mp4">
 <img src="https://tv.vitaforas.de/mario.jpg" alt="18" width="100%" height="auto"></a>
+ <p>         
+</p>
+
+Der Klempner Mario (Originalstimme: Chris Pratt) und sein Bruder Luigi (Charlie Day) betreiben relativ erfolglos eine kleine Klempner-Firma. Als Brooklyn unter Wasser steht, sehen die Brüder ihre große Chance gekommen – was gibt es für eine bessere Werbung für einen Klempner-Betrieb als die Rettung eines ganzen Stadtbezirkes vor unerwünschten Wassermassen? Doch es soll alles ganz anders kommen, denn die beiden entdecken in einer mysteriösen grünen Röhre ein Portal in eine magische Welt und landen so unbeabsichtigt im Pilz-Königreich der Martial-Arts-technisch erstaunlich kompetenten Prinzessin Peach (Anya-Taylor Joy). Aber die bunte Pilz-Welt sieht sich mit einer großen Gefahr konfrontiert: Der fiese Schildkröten-König Bowser (Jack Black) will seine Macht ausweiten und das Königreich zerstören. Als er von Luigi getrennt wird, muss Mario mit Hilfe des etwas tollpatschigen Pilzes Toad also nicht nur Bowser zurückschlagen, sondern im selben Moment auch noch seinen verschwundenen Bruder wiederfinden.
+
+
+ <p>         
+</p>
 
 <a href="https://tv.vitaforas.de/Teich.mp4">
 <img src="https://tv.vitaforas.de/Teich.jpg" alt="13" width="100%" height="auto"></a>
 
+ <p>         
+</p>
 Mack mag es gern übersichtlich und verlässlich, so ganz ohne Aufregung und Gefahr. Und so besteht der Enterich darauf, dass seine Familie den sicheren Teich in Neuengland nicht verlässt, an dem sie leben. Selbst als ein Schwarm anderer Enten vorbeikommt, die auf dem Weg ins Ausland dort Halt macht, lässt sich Mack nicht davon abbringen – zum Ärger seiner Frau Pam und seinen beiden Kindern Dax und Gwen, die gern die Welt kennenlernen würden. Später willigt er doch noch ein und die vier machen sich gemeinsam mit Macks verschrobenem Onkel Dan auf den Weg in die große weite Welt. Jamaica ist das Ziel, von dem ihnen die anderen Entern vorgeschwärmt haben. Dabei müssen sie jedoch feststellen, dass das Abenteuer viele Hindernisse bereithält – und auch die eine oder andere Gefahr, die sie irgendwie meistern müssen …
 
  <p>         
@@ -817,6 +827,8 @@ Mack mag es gern übersichtlich und verlässlich, so ganz ohne Aufregung und Gef
      <a href="https://tv.vitaforas.de/baymax.mp4">
 <img src="https://tv.vitaforas.de/baymax.jpg" alt="7" width="100%" height="auto"></a>
 
+ <p>         
+</p>
 In „Baymax – Robowahobu in Serie“ erlebt der 14-jährige Hiro Hamada immer wieder ungeheuerliche Abenteuer. Stets an seiner Seite: der namensgebende Roboter Baymax. 
 
 <p>         
@@ -824,6 +836,8 @@ In „Baymax – Robowahobu in Serie“ erlebt der 14-jährige Hiro Hamada immer
      <a href="https://tv.vitaforas.de/alles.mp4">
 <img src="https://tv.vitaforas.de/alles.jpg" alt="6" width="100%" height="auto"></a>
 
+ <p>         
+</p>
 Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, Wut, Ekel und Traurigkeit leben im Kontrollzentrum von Rileys Verstand, von wo aus sie dem jungen Mädchen Ratschläge erteilen und ihr zur Seite stehen. Doch nach dem Umzug haben Riley und ihre Gefühle Probleme mit dem Leben in der fremden Stadt und es geht turbulent zu in der innerlichen Kommandozentrale ihrer Emotionen. 
  <p>         
 </p>
