--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Klick Hier</p>
                                                 <!-- Intro -->
                                                         <article id="intro">
                                                                 <h2 class="major">StreamTV</h2>
-                                                                <span class="image main"><img src="https://tv.vitaforas.de/images/banner.jpg" alt="" /></span>
+                                                                <span class="image main"><img src="https://tv.vitaforas.de/1.jpg" alt="" /></span>
 
         <p>         
 </p>         
