Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@ video.play();
                                                         <article id="work">
                                                                 <h2 class="major">FSK 0</h2>
  
-                                                              <span class="image main"><img src="https://tv.vitaforas.de/images/banner.jpg" alt="" /></span>
+                                                              <span class="image main"><img src="https://tv.vitaforas.de/1.jpg" alt="" /></span>
 
 
  <p>         
