Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@ Hosted in Germany © by vitaforas
                                                 <!-- About -->
                                                         <article id="about">
                                                                 <h2 class="major">FSK 18</h2>
-                                                                  <span class="image main"><img src="https://tv.vitaforas.de/images/banner.jpg" alt="" /></span>
+                                                                  <span class="image main"><img src="https://tv.vitaforas.de/1.jpg" alt="" /></span>
 
 
  <p>         
