Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Klick Hier</p>
 
                                                 <!-- Intro -->
                                                         <article id="intro">
-                                                                <h2 class="major">Herzlichen Willkommen bei</h2>
+                                                                <h2 class="major">Welcome @</h2>
                                                                 <span class="image main"><img src="https://tv.vitaforas.de/1.jpg" alt="" /></span>
 
         <p>         
