--- a/index.html
+++ b/index.html
@@ -290,10 +290,14 @@ X-Mas:
 <img src="https://tv.vitaforas.de/Spirit.jpg" alt="48" width="100%" height="auto"></a>
      <a href="https://tv.vitaforas.de/wonka.mp4">
 <img src="https://tv.vitaforas.de/wonka.jpg" alt="42" width="100%" height="auto"></a>
- seiner verstorbenen Mutter (Sally Hawkins), einer Schokoladenexpertin, stark beeinflusst, träumt der Hutträger Willy Wonka davon, die Welt mit seinen Schokokreationen zu verändern. Sieben Jahre lang reist er in die entlegensten Winkel der Erde, sammelt ungewöhnlichste Zutaten und verfeinert seine Techniken als Chocolatier. Dann endlich fühlt er sich bereit, die Menschen mit seinen höchst eigenwilligen Schöpfungen zu becircen, und plant die Eröffnung seines ersten Geschäfts. Dumm nur, dass ein aus den Fabrikanten Slugworth (Paterson Joseph), Fickelgruber (Mathew Baynton) und Prodnose (Matt Lucas) bestehendes Schokoladenkartell das um jeden Preis verhindern will.
+
+Von seiner verstorbenen Mutter (Sally Hawkins), einer Schokoladenexpertin, stark beeinflusst, träumt der Hutträger Willy Wonka davon, die Welt mit seinen Schokokreationen zu verändern. Sieben Jahre lang reist er in die entlegensten Winkel der Erde, sammelt ungewöhnlichste Zutaten und verfeinert seine Techniken als Chocolatier. Dann endlich fühlt er sich bereit, die Menschen mit seinen höchst eigenwilligen Schöpfungen zu becircen, und plant die Eröffnung seines ersten Geschäfts. Dumm nur, dass ein aus den Fabrikanten Slugworth (Paterson Joseph), Fickelgruber (Mathew Baynton) und Prodnose (Matt Lucas) bestehendes Schokoladenkartell das um jeden Preis verhindern will.
 
      <a href="https://tv.vitaforas.de/dickens.mp4">
 <img src="https://tv.vitaforas.de/dickens.jpg" alt="52" width="100%" height="auto"></a>
+
+Obwohl er bereits beachtliche Erfolge für sich verbuchen konnte und es auch familiär nicht besser laufen könnte, möchte sich der nächste "große Wurf" so recht nicht einstellen. Außerdem drückt der Schuh auch finanziell, da man sich das Leben eines britischen Gentlemans erst einmal leisten können muss. Schließlich kommt doch die Inspiration zu einer neuen Story, doch außer dem Namen "Eine Weihnachtsgeschichte" und ein paar vager Ideen will sich so recht nichts einstellen. Hilfe erhält er ausgerechnet von seiner Hauptfigur, Ebenezer Scrooge, die sich plötzlich in seinem Arbeitszimmer materialisiert...
+
 
      <a href="https://tv.vitaforas.de/world.mp4">
 <img src="https://tv.vitaforas.de/world.jpg" alt="62" width="100%" height="auto"></a>
