Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 </p>
 
 <p>         
-  Link : <a href="wnhhhdwbm37fvoxqgr55z7beuxivlndyzr6xsruh7hp2e52ytvofsiad.onion/motel.mp4">
-<img src="https://tv.vitaforas.de/motel.jpg" alt="1" width="100%" height="auto"></a>                                                           </p>
+                                                       </p>
 
 
 <img src="https://tv.vitaforas.de/white.png"> <p>
@@ -896,7 +895,8 @@ Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, W
 
 
         <p>
-
+Link : <a href="wnhhhdwbm37fvoxqgr55z7beuxivlndyzr6xsruh7hp2e52ytvofsiad.onion/motel.mp4">
+<img src="https://tv.vitaforas.de/motel.jpg" alt="1" width="100%" height="auto"></a>      
 </p>
         <p>
 
