Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -98,12 +98,11 @@ Klick Hier</p>
  <p># Klick<a href="https://apk.e-droid.net/apk/app2925093-0w1dcx.apk?v=7"> HIER</a> zum App Download >
  </p>
 
-Ab 11.01.2024 im Kino / Klich 4 TRAILER:
+Jetzt Streamen [[Beekeeper]] / Watch NOW! :
 <ul>
-<li><a href="https://tv.vitaforas.de/trailerBEE.mp4">
+<li><a href="https://tv.vitaforas.de/bee.mp4">
 <img src="https://tv.vitaforas.de/11.01.2024.jpg" alt="1" width="100%" height="auto"></a>
 
-Das neue Jahr startet actionreich.
 <p> </p> 
  In "The Beekeeper" schlüpft Jason Statham in die Rolle eines unscheinbaren Bienenzüchter. In "The Beekeeper" zeigt sich Jason Statham mal wieder von seiner feinsten Seite.
 Jason Statham als unscheinbarer Imker mit Kampfqualitäten
