Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Klick Hier</p>
 Jetzt Streamen [[Beekeeper]] / Watch NOW! :
 <ul>
 <li><a href="https://tv.vitaforas.de/bee.mp4">
-<img src="https://tv.vitaforas.de/11.01.2024.jpg" alt="1" width="100%" height="auto"></a>
+<img src="https://tv.vitaforas.de/bee.jpg" alt="1" width="100%" height="auto"></a>
 
 <p> </p> 
  In "The Beekeeper" schlüpft Jason Statham in die Rolle eines unscheinbaren Bienenzüchter. In "The Beekeeper" zeigt sich Jason Statham mal wieder von seiner feinsten Seite.
