Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1064,6 +1064,18 @@ Der Herr der Ringe:
  </p>     
 
 
+Filme und spannende Serien online Streamen auf vitaforas.de
+
+Sehen Sie Online Filme und Serien Kostenlos mit unserer App mit automatischer Einstellung von guter Qualität direkt auf Ihrem Handy oder Tablet. Volle Unterstützung für mobile Android- und iOS-Systeme.
+
+Topaktuelle Blockbuster und TV Serien in HD
+Absolut kostenlos
+Videothek für SmartTV, Computer und mobile Geräte
+Immer den schnellsten Stream Kostenlos online anschauen.
+Unsere Seite Bietet Dir eine vielzahl von neuen Filme in HD, Serien in HD, Dokus in HD und Kinofilme in HD außerdem ist unsere Seite werbefrei, was uns von anderen unterscheidet und von einem großen Vorteil für dich ist.
+Wir sind die beste alternative seite kinox, bs, movie4k, streamkiste, streamcloud, hdfilme, kinokiste, Kkiste etc.
+
+
  <p># Klick<a href="https://www.appcreator24.com/app2637910-1cnwal"> HIER</a> zum Download<br />  unserer E-Book App 📚</p>    
 
  </p>  
