--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,9 @@ Harry Potter:
 <img src="https://tv.vitaforas.de/harry1.jpg" alt="24" width="50" height="60"></a></li>
      </ul>
 
-
+<p>          
+ </p> 
+[[ Spannende Filme und Serien online Streamen auf vitaforas.de ]]
 <p>          
  </p>     
 
@@ -1061,7 +1063,7 @@ John Wick:
  </p>     
 
 
-Filme und spannende Serien online Streamen auf vitaforas.de
+
         <p>         
 </p>         
 Sehen Sie Online Filme und Serien Kostenlos mit unserer App mit automatischer Einstellung von guter Qualität direkt auf Ihrem Handy oder Tablet. Volle Unterstützung für mobile Android- und iOS-Systeme.
