--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@ Harry Potter:
 
 <p>          
  </p> 
-[[ Spannende Filme und Serien online Streamen auf vitaforas.de ]]
+[[ Filme und Serien online Streamen auf vitaforas.de ]]
 <p>          
  </p>     
 
