Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1009,25 +1009,22 @@ Johnny ist halb Mensch, halb Zombie – ein rares Hybridwesen, das in seinem Blu
 Harry Potter:
 <ul>
      <li><a href="https://tv.vitaforas.de/harry1.mp4">
-<img src="https://tv.vitaforas.de/harry1.jpg" alt="19" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/harry1.jpg" alt="19" width="25%" height="auto"></a>
      <a href="https://tv.vitaforas.de/harry2.mp4">
-<img src="https://tv.vitaforas.de/harry2.jpg" alt="20" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/harry2.jpg" alt="20" width="25%" height="auto"></a>
      <a href="https://tv.vitaforas.de/harry3.mp4">
-<img src="https://tv.vitaforas.de/harry3.jpg" alt="2" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/harry3.jpg" alt="2" width="25%" height="auto"></a>
      <a href="https://tv.vitaforas.de/harry4.mp4">
-<img src="https://tv.vitaforas.de/harry4.jpg" alt="2" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/harry4.jpg" alt="2" width="25%" height="auto"></a>
      <a href="https://tv.vitaforas.de/harry5.mp4">
-<img src="https://tv.vitaforas.de/harry5.jpg" alt="2" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/harry5.jpg" alt="2" width="25%" height="auto"></a>
      <a href="https://tv.vitaforas.de/harry6.mp4">
-<img src="https://tv.vitaforas.de/harry6.jpg" alt="1" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/harry6.jpg" alt="1" width="25%" height="auto"></a>
      <a href="https://tv.vitaforas.de/harry7.mp4">
-<img src="https://tv.vitaforas.de/harry7.jpg" alt="21" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/harry7.jpg" alt="21" width="25%" height="auto"></a>
      <a href="https://tv.vitaforas.de/harry8.mp4">
-<img src="https://tv.vitaforas.de/harry8.jpg" alt="22" width="50" height="60"></a>
-     <a href="https://tv.vitaforas.de/harry1.mp4">
-<img src="https://tv.vitaforas.de/harry1.jpg" alt="23" width="50" height="60"></a>
-     <a href="https://tv.vitaforas.de/harry1.mp4">
-<img src="https://tv.vitaforas.de/harry1.jpg" alt="24" width="50" height="60"></a></li>
+<img src="https://tv.vitaforas.de/harry8.jpg" alt="22" width="25%" height="auto"></a>
+    </li>
      </ul>
 
 <p>          
