Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,39 @@ Immer den schnellsten Stream Kostenlos online anschauen.
 Unsere Seite Bietet Dir eine vielzahl von neuen Filme in HD, Serien in HD, Dokus in HD und Kinofilme in HD außerdem ist unsere Seite werbefrei, was uns von anderen unterscheidet und von einem großen Vorteil für dich ist.
 Wir sind die beste alternative seite kinox, bs, movie4k, streamkiste, streamcloud, hdfilme, kinokiste, Kkiste etc.
 
+ <p>         
+</p>
 
+<a href="https://tv.vitaforas.de/maze.mp4">
+<img src="https://tv.vitaforas.de/mazerunner.jpg" alt="9910" width="31%" height="auto"></a>
+
+Eines Tages wacht Thomas (Dylan O'Brien) in einem Aufzug auf, aber das einzige, woran er sich erinnern kann, ist sein Vorname. Seine gesamten restlichen Erinnerungen sind verschwunden. Er stellt fest, dass er nicht allein ist: Als sich die Aufzugtür öffnet, strömen weitere Teenager-Jungs auf ihn zu und begrüßen ihn. Der Ort, an dem er angekommen ist, nennt sich „die Lichtung“ und wird von einer großen Steinwand umschlossen. Genau wie Thomas wissen auch die anderen nicht, warum sie dort sind und wie sie dorthin gelangt sind. Sie wissen nur, dass sich jeden Tag große Türen in der Steinwand zu einem Irrgarten öffnen, der hinter den Mauern liegt. Nachts schließen sich die Türen wieder und alle 30 Tage wird ein neuer Jugendlicher mit dem Aufzug gebracht. Das ist zunächst alles, was Thomas in Erfahrung bringen kann. Als eines Tages ein Mädchen (Kaya Scodelario) den mysteriösen Ort erreicht, ist dies eine Sensation, denn sie ist das erste weibliche Mitglied der aus 60 Personen bestehenden Gruppe. Jeder einzelne hat eine bestimmte Aufgabe - einige werden ausgewählt, durch das Labyrinth zu laufen und den Verlauf der Mauern aufzuzeichnen. Doch im Irrgarten scheinen sie nicht allein zu sein...
+
+
+ <p>         
+</p>
+
+<li><a href="https://tv.vitaforas.de/maze2.mp4">
+<img src="https://tv.vitaforas.de/maze2.jpg" alt="7" width="31%" height="auto"></a>
+
+Thomas und seine Mitstreiter sind dem Labyrinth entkommen und stellen mit Schrecken fest, dass die Erde in Schutt und Asche liegt und durch starke Sonneneinstrahlungen verwüstet wurde. Zunächst werden die jungen Helden in einem Wohnheim untergebracht, wo sie fürs Erste in Sicherheit sind. Doch nach kurzer Zeit entdecken Thomas und seine Mitstreiter Leichen, die von der Decke hängen und darüber hinaus werden sie von den sogenannten „Cranks“ bedroht. Später finden sie heraus, dass ihre Mitstreiterin Teresa verschwunden ist. Gemeinsam mit seinen Freunden Minho und Newt versucht Thomas die verschwundene Teresa zu finden, wobei sie zahlreichen Gefahren trotzen müssen und sich schließlich dem finsteren Janson stellen müssen...
+
+ <p>         
+</p>
+
+<li><a href="https://tv.vitaforas.de/maze3.mp4"> 
+<img src="https://tv.vitaforas.de/maze3.jpg" alt="7" width="31%" height="auto"></a>
+
+Nachdem Thomas dem Labyrinth entkommen ist und die Brandwüste durchquert hat, sind die Abenteuer für ihn und seine Freunde noch längst nicht ausgestanden. Ein Jahr ist vergangen. Inzwischen haben er, Newt, Minho und Teresa so einiges in Erfahrung gebracht. Sie wissen nun, dass sie Teil eines groß angelegten Experiments waren, mit dem die Organisation Wicked ein Heilmittel für die weltweit ausgebrochene Seuche namens "Der Brand" finden wollte, die Menschen in tollwütige Bestien verwandelt. Thomas gehört zu den wenigen Personen, die gegen den letztendlich tödlich endenden Virus immun sind, und so fällt es nun ihm zu, den Verfall der Menschheit aufzuhalten.
+
+</ul>
+
+
+
+
+
+ <p>         
+</p>
 <p>
 </p>
 Der Herr der Ringe:
