Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,9 @@ Wir sind die beste alternative seite kinox, bs, movie4k, streamkiste, streamclou
 
  <p>         
 </p>
+Mazerunner:
 
+ 
 <a href="https://tv.vitaforas.de/maze.mp4">
 <img src="https://tv.vitaforas.de/mazerunner.jpg" alt="9910" width="31%" height="auto"></a>
 
