Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@ Wir sind die beste alternative seite kinox, bs, movie4k, streamkiste, streamclou
 
  <p>         
 </p>
-Mazerunner:
+Maze Runner:
 
 
 <ul>
