Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Basierend auf wahren Begebenheiten:
  <p>         
 </p>         
 
-     <a href="https://tv.vitaforas.de/suzume.mp4">
+     <a href="https://zero.vitaforas.de/suzume.mp4">
 <img src="https://tv.vitaforas.de/suzume.jpg" alt="26" width="100%" height="auto"></a>
 
 <p>         
