Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@ Hosted by vitaforas
 
 
 
- <p> # 💰Und gerne Klick<a href="https://www.paypal.me/TalIlex"> HIER</a> und <br /> sende Unterstützung über PayPal 🪙💸</p>    
+ <p> # 💰Und gerne Klick<a href="https://www.paypal.me/vitaforas"> HIER</a> und <br /> unterstütze uns mit Verwendungszweck 'Spende' über PayPal 🪙💸</p>    
 
 
         <p>
