Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Basierend auf wahren Begebenheiten:
 </p>         
 
      <a href="https://zero.vitaforas.de/suzume.mp4">
-<img src="https://tv.vitaforas.de/suzume.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://zero.vitaforas.de/suzume.jpg" alt="26" width="100%" height="auto"></a>
 
 <p>         
 </p>  
