Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -938,6 +938,11 @@ Hosted in Germany © by vitaforas
                                                                   <span class="image main"><img src="https://tv.vitaforas.de/1.jpg" alt="" /></span>
 
 
+
+<a href="stumm.mp4">
+<img src="stumm.jpg" alt="4" width="100%" height="auto"></a>
+Brian Godlock (Joel Kinnaman) muss mit ansehen, wie sein kleiner Sohn an Heiligabend in das Kreuzfeuer einer Gang gerät und stirbt. Dabei wird er selbst schwer verletzt und seiner Stimme beraubt. Rache wird nun zu seiner einzigen Mission und er beginnt dafür ein hartes Training. Godlock ist bereit, alles zu riskieren, um den Tod seines Sohnes zu vergelten
+
  <p>         
 </p>        
 
